<resources>
    <string name="app_name">Place Note</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="bottom_navigation_button_map">Map</string>
    <string name="bottom_navigation_button_list">List</string>

    <string name="hint_title">Title</string>
    <string name="hint_note_text">Note text</string>
    <string name="frag_note_details_radius_label_text">Radius: </string>
    <string name="frag_note_details_radius_default_value">100</string>
    <string name="frag_note_details_radius_units">meters</string>
    <string name="frag_note_details_address_hint">Address</string>
    <string name="frag_note_details_labels_button">Labels</string>
    <string name="frag_note_details_delete_button">Delete</string>
</resources>
