<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />



    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


        <android.support.constraint.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/fragment_details_vertical_margin" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/fragment_details_horizontal_margin" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/fragment_details_horizontal_margin" />


        <EditText
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/hint_title"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:scrollbars="vertical"
            android:textColor="@android:color/black"
            android:textSize="@dimen/fragment_details_title_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toTopOf="@+id/guideline_top" />

        <EditText
            android:id="@+id/note_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_between_elements"
            android:background="@android:color/transparent"
            android:hint="@string/hint_note_text"
            android:inputType="textMultiLine"
            android:textSize="@dimen/fragment_details_note_text_size"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/labels_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_between_elements"
            android:animateLayoutChanges="true"
            app:alignItems="flex_start"
            app:dividerDrawable="@drawable/shape_labels_flexbox_divider"
            app:flexWrap="wrap"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/note_text"
            app:showDivider="middle">

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Badge" />

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Badge" />

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Badge" />

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Badge" />

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Badge" />

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Badge" />

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="Badge" />

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="Badge" />

        </com.google.android.flexbox.FlexboxLayout>

        <TextView
            android:id="@+id/radius_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_between_elements"
            android:labelFor="@+id/radius"
            android:text="@string/frag_note_details_radius_label_text"
            android:textSize="@dimen/fragment_details_note_text_size"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/labels_container" />

        <EditText
            android:id="@+id/radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_margin_between_elements"
            android:layout_marginTop="@dimen/common_margin_between_elements"
            android:background="@android:color/transparent"
            android:inputType="number"
            android:text="@string/frag_note_details_radius_default_value"
            android:textSize="@dimen/fragment_details_note_text_size"
            app:layout_constraintStart_toEndOf="@id/radius_label"
            app:layout_constraintTop_toBottomOf="@id/labels_container" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_margin_between_elements"
            android:layout_marginTop="@dimen/common_margin_between_elements"
            android:text="@string/frag_note_details_radius_units"
            android:textSize="@dimen/fragment_details_note_text_size"
            app:layout_constraintStart_toEndOf="@id/radius"
            app:layout_constraintTop_toBottomOf="@+id/labels_container" />

        <AutoCompleteTextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_between_elements"
            android:background="@android:color/transparent"
            android:hint="@string/frag_note_details_address_hint"
            android:textColor="@android:color/black"
            android:textSize="@dimen/fragment_details_note_text_size"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/radius_label" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/map"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/common_margin_between_elements"
            app:layout_constraintDimensionRatio="H,4:3"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/address">

        </com.google.android.gms.maps.MapView>



            </android.support.constraint.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/labels_button"
            style="@style/NoteDetailsButtons"
            android:drawableStart="@drawable/ic_label_black_24dp"
            android:text="@string/frag_note_details_labels_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/delete_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/delete_button"
            style="@style/NoteDetailsButtons"
            android:drawableStart="@drawable/ic_delete_black_24dp"
            android:text="@string/frag_note_details_delete_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/labels_button" />


    </android.support.constraint.ConstraintLayout>

</layout>